# sine_chatbot

./: .env  .env.lambda  check_supported_models.py  main.py  pyproject.toml  requirements-lambda.txt  requirements.txt  requirements_streamlit.txt  run_streamlit.py  streamlit_app.py  test.py  test_agent.py  test_agent_real.py  test_qdrant_retrieval.py  test_qdrant_simple.py  test_s3_ingestion.py  test_simple.py
config/: lambda-env.json  logging-config.json  secrets-template.json  whatsapp-config.json
src/api/: main.py
src/config/: settings.py
src/core/: agent.py  create_collection.py
src/data/: Produtos Tratados (2).xlsx
src/ingestion/: ingestion_data.py
src/lambda/: lambda_function.py
src/models/: embeddings.py
src/service/: embeddings_services.py  llm_service.py  prompt_service.py  retriever_service.py  speech_to_text.py
