[project]
name = "sine-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "boto3>=1.40.21",
    "dotenv>=0.9.9",
    "fastembed>=0.7.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pydantic-settings>=2.10.1",
    "qdrant-client>=1.15.1",
    "tqdm>=4.67.1",
]
