[project]
name = "sine-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "boto3>=1.40.21",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "fastembed>=0.7.3",
    "langgraph>=0.6.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pydantic-settings>=2.10.1",
    "qdrant-client>=1.15.1",
    "streamlit>=1.49.1",
    "tqdm>=4.67.1",
]
